--- a/task_akna/src/TableComponent/table.css
+++ b/task_akna/src/TableComponent/table.css
@@ -57,6 +57,27 @@ i {
     width: 45%;
     text-align: center;
 }
+.content{
+    overflow: auto;
+    max-height: 250px;
+    
+}
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(48, 76, 117); 
+    border-radius: 10px;
+  }
+  
 .popup {
     position: fixed;
     width: 100%;
@@ -68,12 +89,14 @@ i {
     margin: auto;
     background-color: #5f5d5a69;
   }
-  .form{
+  .popup_content{
     padding: 15px;
     position: absolute;
-    top: 20%;
+    top: 30%;
     left: 50%;
+    max-height: 300px;
     width: 29%;
+    
     transform: translate(-50%,-50%);
     color: rgb(249, 249, 249);
     z-index: 99;
